broken layout fix for non-ff browsers' 'more' link (bug 707942)

--- a/media/css/impala/listing.less
+++ b/media/css/impala/listing.less
@@ -56,11 +56,12 @@
                 &:after {
                     border: 3px solid transparent;
                     border-top-color: #666;
-                    display: inline-block;
+                    position: relative;
                     margin: 0 0 0 3px;
                     content: "";
                     width: 0;
                     height: 0;
+                    top: 8px;
                 }
             }
             ul {
@@ -105,6 +106,7 @@
                     top: 19px;
                     width: 130px;
                     z-index: 52;
+                    left: 0;
                 }
             }
         }
